# personal-diary

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
apps/diary/: admin.py  forms.py  models.py  urls.py  views.py
apps/diary/migrations/: 0001_initial.py  0002_initial.py
apps/diary/static/diary/css/: bootstrap.min.css  main.css
apps/diary/templates/diary/: base.html  home.html
apps/diary/templates/diary/diary_entry/: diary_entry_confirm_delete.html  diary_entry_detail.html  diary_entry_form.html  diary_entry_list.html
apps/diary/templates/diary/subtemplates/: header.html
apps/diary/templatetags/: my_tags.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/management/commands/: create_su.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: login.html  profile.html  profile_info.html  recovery_form.html  register.html  user_form.html
config/: settings.py  urls.py
fixtures/: 001_users.json  002_diary_entry.json
