[tool.poetry]
name = "personal-diary"
version = "0.1.0"
description = ""
authors = ["Artur <youzen0you@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
django = "5.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
